[package]
name = "transactions_processor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap ={ version = "4.5.3", features = ["derive"]}
csv = "1.3.0"
serde = {version = "1.0.197", features = ["derive"]}
serde_json = "1.0.114"
thiserror = "1.0.58"

[dev-dependencies]
stringreader = "0.1.1"
